# aos-to-soa

./: CMakeLists.txt  README.md  soac.cpp  test.cu  test.h  test.soa
